static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');

/* general site styles */
html {
    height: 100%;
}

body {
    min-height: 100vh;
    position: relative;
}

.books-container {
    min-height: 85vh;
}

.books-blue-text {
    color: #00004d !important;
}

.bg-lite-gray {
    background-color: #e0e0e0;
}

.border-blue {
    border: 1px solid #00004d !important;
}

/* Books stars */

.stars {
    display: inline;
}

/* Site wide buttons */

.books-button-white {
    background-color: #F5F5F5;
    text-decoration: none;
    border: #00004d;
    border-style: solid;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #00004d;
    font-weight: 600;
}

.books-button-white:hover {
    background-color: #00004d;
    color: #F5F5F5;
}

.books-button {
    background-color: #00004d;
    text-decoration: none;
    border-radius: 12px;
    border: 3px solid #00004d;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #F5F5F5;
    font-weight: 600; 
}

.books-button:hover {
    background-color: #F5F5F5;
    color: #00004d;
    border: 3px solid #00004d;
}

.button-blue {
    background: #00004d;
    color: #F5F5F5;
}

.pop-genres-select-button:hover,
.pop-genres-select-button-active:hover,
.button-blue:hover,
.button-blue:active,
.button-blue:focus {
    background: #1e1e88;
    color: #F5F5F5;
}

/* Back to top button */

.back-to-top-button {
    background-color: #00004d;
    border-radius: 12px;
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;

}

.back-to-top-button span {
color: #f0f0f0;
font-size: 38px;
margin-top: -10px;
}

/* Remove pointer on button hover */
.back-to-top-link,
.update-link,
.remove-item {
    cursor: pointer;
}

/* Bag button */

.bag-button {
    border-radius: 12px;
    padding: 4px 18px;
}

/* Home page */

.home-main {
    background-color: #e0e0e0;
}

/* Home carousel */

.owl-carousel {
    background-color: #e0e0e0;
}

.carousel-image {
    position: absolute;
    margin-top: 15%;
    margin-left: 10%;
    box-shadow: 5px 5px 20px #000;
}

.carousel-info {
    height: 75%;
    width: 50%;
    position: absolute;
    margin-top: 14%;
    margin-left: 50%;
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
}

.carousel-info ul {
    list-style-type: none;
}

.carousel-stars {
    margin-left: -17%;
}

.carousel-bg-image{
    height: 250px;
    width: 100%;
    background-image: url(https://abundant-books-ms4.s3.eu-west-2.amazonaws.com/media/grey-smoke-png-9-transparent.png);
    background-position: center;
}

.carousel-bg-one {
    background-color: #FAB5D9;
}

.carousel-bg-two {
    background-color: #FF7D3B;
}

.carousel-bg-three {
    background-color: #CDFA7C;
}

.carousel-bg-four {
    background-color: #73E8C2;
}

.carousel-bottom {
    height: 80px;
    background-color: #e0e0e0;
    width: 100%;
}

.carousel-button {
    background-color: #f0f0f0;
    text-decoration: none;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #00004d;
    border : 2px solid #00004d;
    font-weight: 600;
    position: absolute;
    margin-right: 3px;
}

.carousel-button:hover {
    background-color: #00004d;
    color: #f0f0f0;
}

.carousel-edit-button {
    position: absolute;
    margin-top: 40px;
}

/* Home page author section */
.author-image {
    max-width: 40px;
    max-height: 80px;
}

.author-text {
    color: #00004d;
}

/* Home page pop genres section */

.pop-genres-main {
    min-height: 400px;
}

.pop-genres-card {
    min-height: 250px;
}

.pop-genres-info {
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
    text-decoration: none;  
}

.pop-genres-info ul {
    list-style-type: none;
}

.pop-genres-stars {
    margin-left: -31px;
}

.pop-genres-select-button {
    background-color: #f0f0f0;
    color: #00004d;
    border-radius: 50% / 50%;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    box-shadow: 5px 5px 10px #000;
    border: 1px solid #00004d;
}

.pop-genres-select-button-active {
    background-color: #00004d;
    color: #f0f0f0;
    border-radius: 50% / 50%;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    box-shadow: 5px 5px 10px #000;
    border: 1px solid #00004d;
}

.pop-genres-button {
    background-color: #00004d;
    text-decoration: none;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #f0f0f0;
    font-weight: 600;
}

.pop-genres-button:hover {
    background-color: #f0f0f0;
    color: #00004d;
    box-shadow: 5px 5px 10px #00004d;
}

/* Home page deals section */

.deal-image {
    height: 100px;
    width: 80px;
}

.deal-text {
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
    text-decoration: none; 
}

.deal-text ul {
    list-style-type: none;
}


/* Books page */

.all-books-button {
    border-radius: 12px;
    padding: 4px 18px;
    color: #F5F5F5;
    background-color: #00004d;
    
}

.books-card {
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
    text-decoration: none;
    min-height: 310px;
}

.books-img {
    min-width: 130px;
}

.books-card ul {
    list-style-type: none;
}

/* Book info page */
.info-book-img {
    margin-top: 5%;
    margin-left: 20%;
}

.synopsis-author-button {
    background-color: #00004d !important;
    border-radius: 12px;
    border: 3px solid #00004d;
    padding: 4px 18px;
    color: #F5F5F5 !important;
}

.synopsis-author-button-active {
    background-color: #F5F5F5 !important;
    border-radius: 12px;
    border: 3px solid #00004d !important;
    padding: 4px 18px;
    color: #00004d !important;
}

/* Books info carousel */
.carousel-bg-info {
    height: 250px;
    width: 100%;
    background-color: #e0e0e0;
}

/* Allauth */

.header-title {
    color: #00004d;
    font-family: 'Open Sans', sans-serif;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #00004d;
}

.allauth-form-inner-content input {
    border-color: #00004d;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #00004d;
    border: 3px solid #00004d;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: 600;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #00004d;
    background-color: #f0f0f0;
    border-color: #00004d;
}

.allauth-form-inner-content a {
	color: #1e1e88; /* text-info */
}

.allauth-form-inner-content .form-check-label {
    color: #00004d;
}

/* Footer */
.footer-container {
    min-height: 100px;
    background-color: #fff;
    color: #00004d;
    padding-top: 10px;
    bottom: 0;
    left: 0;
}

.footer-header {
    margin-left: 30px;
}

.contact-list {
    list-style: none;
}

.social a {
    list-style: none;
    font-size: 60px;
    display: inline;
    text-decoration: none;
    color: #00004d;

}

/* Bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* Media quries */

@media screen and (max-width: 400px) {
    .carousel-button {
        padding: 4px 8px;
        box-shadow: 4px 4px 8px #000;
    }
    .carousel-image {
        margin-left: 3%;
        box-shadow: 5px 5px 10px #000;
    }

    .carousel-info {
        width: 60%;
    }
}

